[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "server",
]

[workspace.dependencies]
dioxus = { version = "0.6.0" }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls","macros","postgres","chrono"] }
reqwest = { version = "0.12.11", features = ["blocking"] }
axum = { version = "0.7.9" }
tokio = {version="1.38.0", features=["full"]}
tracing = "0.1.41"
thiserror = "2.0.9"
serde = {version="1.0.217", features= ["derive"]}
chrono = {version="0.4.19", features= ["serde"]}
# workspace
ui = { path = "ui" }
server = { path = "server" }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
