[package]
name = "web"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
dioxus = { workspace = true, features = ["router","fullstack"] }
dioxus-cli-config = { version = "0.6"}

axum = { version = "0.7.0",optional = true  }
tokio = {version="1.42.0", features=["full"], optional = true}
tracing = "0.1.41"
ui = { workspace = true }

[features]
default = []
web = ["dioxus/web"]
server = [ "dioxus/server" ,"axum","tokio"]
