[package]
name = "web"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
dioxus = { workspace = true, features = ["router","fullstack"] }
dioxus-cli-config = { version = "0.6", optional = true }
sqlx = { workspace = true , optional = true}
axum = { workspace = true, optional = true  }
tokio = { workspace = true, optional = true}
ui = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
serde = {workspace = true }
serde_yaml = {version ="0.9.34"}
thiserror = { workspace = true}
chrono = { workspace = true }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.5.2", features=["fs"],optional = true }

[features]
default = []
web = ["dioxus/web"]
server = [ "dioxus/server" ,"axum","tokio","sqlx", "dioxus-cli-config", "tower", "tower-http"]
